--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,22 @@ export("%>%")
 export(aes)
 export(mobile)
 export(mobileOutput)
+export(mobile_animate)
 export(mobile_area)
+export(mobile_axis_x)
+export(mobile_axis_y)
 export(mobile_bar)
+export(mobile_coord)
+export(mobile_hide_axis)
+export(mobile_legend)
 export(mobile_line)
 export(mobile_path)
 export(mobile_point)
 export(mobile_polygon)
+export(mobile_scale_x)
+export(mobile_scale_y)
 export(mobile_schema)
+export(mobile_tooltip)
 export(render_mobile)
 import(htmlwidgets)
 importFrom(ggplot2,aes)
