correct aes + init options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(mobile_coord)
 export(mobile_hide_axis)
 export(mobile_legend)
 export(mobile_line)
+export(mobile_options)
 export(mobile_path)
 export(mobile_point)
 export(mobile_polygon)
