--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(mobile_axis_x)
 export(mobile_axis_y)
 export(mobile_bar)
 export(mobile_coord)
+export(mobile_ggplot_theme)
 export(mobile_hide_axis)
 export(mobile_legend)
 export(mobile_line)
@@ -20,6 +21,7 @@ export(mobile_polygon)
 export(mobile_scale_x)
 export(mobile_scale_y)
 export(mobile_schema)
+export(mobile_theme)
 export(mobile_tooltip)
 export(render_mobile)
 import(htmlwidgets)
