--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(mobile_bar)
 export(mobile_coord)
 export(mobile_ggplot_theme)
 export(mobile_hide_axis)
+export(mobile_interaction)
 export(mobile_legend)
 export(mobile_line)
 export(mobile_options)
@@ -21,6 +22,7 @@ export(mobile_polygon)
 export(mobile_scale_x)
 export(mobile_scale_y)
 export(mobile_schema)
+export(mobile_scroll)
 export(mobile_theme)
 export(mobile_tooltip)
 export(render_mobile)
