--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,3 +31,4 @@ importFrom(ggplot2,aes)
 importFrom(magrittr,"%>%")
 importFrom(purrr,keep)
 importFrom(purrr,map)
+importFrom(utils,getFromNamespace)
